--- a/.github/workflows/work_1.yml
+++ b/.github/workflows/work_1.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Print Something
-      run: echo "Hola Pitaya!"
+      run: echo "Impresión 1"
+      run: echo "Impresión 2"
+      run: echo "Impresión 3"
